# power-pwn

./: .bandit  .coveragerc  .flake8  .gitattributes  .gitignore  .isort.cfg  Dockerfile  cli.py  init_repo.py  license  readme.md  requirements.txt  setup.cfg  setup.txt  start-container-webserver.sh
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: pr_validation.yml
docs/: cloud_setup.md
docs/machinepwn/: cloud_setup.md  infect_machine.md  machine_pwn.md  troubleshoot.md
docs/powerdump/: README.md
puppeteer_get_substrate_bearer/: get_substrate_bearer_office.js  get_substrate_bearer_teams.js  package-lock.json  package.json  readme.md  utils.js
schema/: desktop.json  desktop_flows.json  endpoint_flow_input.json  flow_input.json  flow_output.json
solution/pwntoso_1_0_0_1/: [Content_Types].xml  customizations.xml
solution/pwntoso_1_0_0_1/Workflows/: Cleanup-57BFF48E-24FB-48E9-A390-AC62ADF38B07.json  RunCleanup-77740706-9DEC-EC11-BB3D-0022482CA4A7.json  RunCodeExec-75740706-9DEC-EC11-BB3D-0022482CA4A7.json  RunExfil-78740706-9DEC-EC11-BB3D-0022482CA4A7.json  RunRansomware-76740706-9DEC-EC11-BB3D-0022482CA4A7.json  RunStealCookie-8B5C57DA-F404-ED11-82E4-0022481BF843.json  StealCookie-28050355-D9DF-4CE7-BFBC-4F7DDE890C2A.json  StealPowerAutomateToken-C4E7B7DA-54E4-49AB-B634-FCCD77C65025.json
src/: requirements.txt
src/power_automate_setup/schema/: endpoint_flow_output.json
src/powerpwn/: __init__.py  c2.py  cli.py  const.py  main.py
src/powerpwn/cli/: arguments.py  runners.py
src/powerpwn/cloud/: cli.py
src/powerpwn/copilot/: consts.py  main.py
src/powerpwn/copilot_studio/: .gitignore
src/powerpwn/desktop/: cli.py
src/powerpwn/enums/: str_enum.py
src/powerpwn/machinepwn/: machine_pwn.py
src/powerpwn/models/: cmd_arguments.py  cmd_results.py  flow_arg.py  flow_arguments.py  flow_res.py  flow_results.py
src/powerpwn/nocodemalware/: malware_runner.py
tests/powerpwn_tests/: c2_test.py
tests/powerpwntests/: c2_test.py
(+165 files in other folders)
